server/compilers/goLiteJS/src/test/ml2/valid/funcstmt.go
package main 


func main(a int) {
    main(3)
}
