server/compilers/goLiteJS/src/test/ml2/invalid/typedecl2.go
package main

type (
    as int;
    gs float64;
    int float64;
)
type as float64
